# side-projects

./: .gitignore  .gitmodules  .project  CMakeLists.txt  GameOfLife.java  PhysicsGame.java  README.md  buildandrun.sh  gambling.js  gambling2.js  result.txt  resultByDealer.txt  resultByHand.txt
Animator/: FpsHandler.cpp
ChessPlayer/: .gitignore  Board.java  ChessGame.java  ChessPlayer.java  Game.java  Piece.java  README.md  run.sh
EMSimple/: CMakeLists.txt
EMSimple/include/: constants.hpp
NeuralNets/: .gitignore  AIFightingGame.java  Bullet.java  Character.java  GUI.java  Game.java  Main.java  Member.java  NeuralNet.java  Population.java  README.md  Stats.java  run.sh
OffProjects/: blackjack.w  blank.html  log.csv  log.txt  magicSquare.js  nonParallelizedTournamentSort.js  parser.py  results.txt  sqrt.py  taskSorter.js  test.js
c++-projects/: cmsi371-assignment1.cpp
cellularautomata/: CellularAutomata.java  CellularAutomataFrame.java  README.md  run.sh
chessplayer/: Board.java  ChessGame.java  ChessPlayer.java
conways-game-of-life/: GameOfLife.java  README.md
coolProjs/: chopsticks.js
include/: constants.hpp
java-projects/: .classpath  .gitignore  .project
js-projects/: 2048bot.js  Easy.ohm  NeuralNet.w  README.md  UHC.txt  arbitraryprecision.js  blackjackodds.js  brain.js  calcDice.js  chopsticks.js  countOccurances.js  derivativetest.js  drunkspellingbee.html  equity.js  fft.js  firstAndLast.w  mapsolver.js  newScore.js  package-lock.json  package.json  parser.js  sortTest.js  ticTacToe.js  typechart.js  voting.js
kern/: .gitignore  Animator.java  ComplexNum.java  Game.java  GifSequenceWriter.java  Keyframe.java  Tools.java
mandelbrot/: Mandelbrot.java  MandelbrotFrame.java  readme.md  run.sh
mandelbrot-plotter/: ComplexNum.java  Mandelbrot.java  MandelbrotFrame.java  readme.md
python-projects/: Holdem.py  README.md  blackjack.py  pokemon_test.py  posterize.py  sequence.py  wordMaker.py
src/: Ball.cpp  index.cpp  main.cpp
threed/: .gitignore  CylinderObject.java  Demo3D.java  LineObject.java  Object3D.java  PlaneObject.java  PointObject.java  README.md  (+2 more)
(+295 files in other folders)
